# toolbox

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements-dev.txt
notes/linux/: cmd_cheatsheet_template.md  cmd_cheatsheet_template.rst  find_cmd_cheatsheet.md  find_cmd_debug_session_notes.md  grep_cmd_cheatsheet.md
scripts/bash/: create_dirs_files_text.sh  docker_clean.sh  killfox.sh  weather.sh
scripts/python/: check_webpage.py  chk_files.py  chk_files_subproc.py
scripts/python/django/: change_dir_perms.py  chk_gh_issues.py  clean_nox_files.py  cp_python_version.py  cp_user_form.py  create_gh_issue_bug.py  create_gh_issue_deployment.py  create_gh_issue_documentation.py  create_gh_issue_enhance.py  create_gh_issue_testing.py  create_gh_label.py
