[tool.poetry]
name = "toolbox"
version = "0.1.1"
description = "A collection of scripts, utilites, templates, and tech notes."
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^7.0"
pre-commit = "^4.0"
safety = "^2.0"
flake8-black = "^0.3.3"
flake8-bandit = "^4.1.1"
nox = "^2022.8.7"
flake8-import-order = "^0.18.1"
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = "^7.0"
ipython = "^8.5.0"
pip-check = "^2.7"
pip-audit = "^2.4.3"
Sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
