[project]
name = "toolbox"
version = "0.1.1"
description = "A collection of scripts, utilites, templates, and tech notes."
requires-python = ">=3.11.0, <=3.14.0"
authors = [
    { name = "Kevin Bowen", email = "kevin.bowen@gmail.com" },
]
maintainers = [
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["django","web-application","template",]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = ">=24.0, <25.0"
flake8 = "^7.0"
pre-commit = ">=4.0, <5.0"
safety = "^2.0"
flake8-black = "^0.3.3"
flake8-bandit = "^4.1.1"
nox = "^2022.8.7"
flake8-import-order = "^0.18.1"
pytest = ">=8.0, <8.4"
pytest-cov = ">=6.0.0, <7.0"
coverage = { version = ">=7.0.0, <8.0.0", extras = ["toml"] }
pip-audit = ">=2.9.0, <3.0.0"
Sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
